src/test/resources/invalid_tests/InvalidIOShape1.cnna
architecture InvalidIOShape1(){
    def input Q(-oo:+oo)^{C:10, C:2} in
    def output Q(0:1)^{H:10, W:2, C:2, H:2} out

    in ->
    FullyConnected(units=64) ->
    Tanh() ->
    FullyConnected(units=10) ->
    Softmax() ->
    out
}